Add todoapp chart and values

--- a/.infrastructure/app/hpa.yml
+++ b/.infrastructure/app/hpa.yml
@@ -8,18 +8,18 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: todoapp
-  minReplicas: 2
-  maxReplicas: 5
+  minReplicas: {{ .Values.todoapp.hpa.minReplicas }}
+  maxReplicas: {{ .Values.todoapp.hpa.maxReplicas }}
   metrics:
   - type: Resource
     resource:
       name: cpu
       target:
         type: Utilization
-        averageUtilization: 70
+        averageUtilization: {{ .Values.todoapp.hpa.cpu.averageUtilization }}
   - type: Resource
     resource:
       name: memory
       target:
         type: Utilization
-        averageUtilization: 70
+        averageUtilization: {{ .Values.todoapp.hpa.memory.averageUtilization }}
