--- a/.infrastructure/helm-chart/todoapp/templates/clusterIp.yml
+++ b/.infrastructure/helm-chart/todoapp/templates/clusterIp.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: {{ .Chart.name }}
+    app: {{ .Chart.Name }}
   ports:
   - protocol: TCP
     port: 80
