--- a/.infrastructure/helm-chart/todoapp/templates/pvc.yml
+++ b/.infrastructure/helm-chart/todoapp/templates/pvc.yml
@@ -10,4 +10,4 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: {{ .Values.todoapp.pvc.requests }}
+      storage: {{ .Values.todoapp.pvc.requests.storage }}
